--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PT'
+- GITenberg
 title: Die Liebesbriefe der Marquise
 url: http://www.gutenberg.org/ebooks/42617
